# GRAPHICS_GIT_BARE_REPO

dynamic_projection/source/: CMakeLists.txt  make_mapview
dynamic_projection/source/CMakeHelpers/: FindVimba.cmake  FindVimbaCPP.cmake
dynamic_projection/source/applications/army/: Makefile  army.cpp  army.h  gridreader.h  main.cpp  matrix.h  munkres.h  node.h  remesh_geometry.sh  run_army.sh  run_no_projection.sh  take_projection_pix.sh  vision_test.sh
dynamic_projection/source/applications/audio_interface/: Bank.cpp  Bank.h  Controls.cpp  Controls.h  FadeLabel.h  PolyButton.cpp  PolyButton.h  PolyInterface.cpp  PolyInterface.h  RecordDialog.cpp  RecordDialog.h  Track.cpp  Track.h  TrackRegion.cpp  TrackRegion.h  TrashCan.cpp  TrashCan.h  argparser.h  fiveDrums.mmpz  main.cpp  newTrack_texture.ppm  rdtsc.h
dynamic_projection/source/applications/drum_feature/: argparser.h  drumControl.pd  drumInterface.cpp  drumInterface.h  fiveDrums.mmpz  main.cpp  myLabel.h  polyButton.h
dynamic_projection/source/applications/graph_interaction/: .gitignore  animal_notes.txt  argparser.h  graph.cpp  graph.h  main.cpp  more_animals.txt  node.cpp  node.h  object_group.cpp  object_group.h  tiny_animals.txt
dynamic_projection/source/applications/graphvis/: .gitignore  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphButton.cpp  GraphButton.h  Hash.h  Layer.cpp  Layer.h  Makefile  Metadata.cpp  Metadata.h  Spring.cpp  Spring.h  action.h  anchor.txt  animals.txt  argparser.h  buildlib.sh  centernode.txt  chained.txt  drift.txt  graphanimals.txt  graphmore_animals.txt  lib_dummy_funcs.cpp  main.cpp  output.txt  randfile.txt  springtest.txt  test.txt  texture.txt  translated.txt
dynamic_projection/source/applications/human_paintbrush/: HumanPaintbrush.maxpat  toto.maxpresets
dynamic_projection/source/applications/magnification/: TODO  argparser.h  camera.cpp  camera.h  canvas.cpp  canvas.h  cursor.cpp  cursor.h  magnification.sublime-project  magnification.sublime-workspace  main.cpp  main.cpp.BAK  mesh.cpp  mesh.h  shader_manager.cpp  shader_manager.h  tile.cpp  tile.h
dynamic_projection/source/applications/paint/: BoundingBox2f.cpp  BoundingBox2f.h  ButtonManager.cpp  ButtonManager.h  ClickableObject.cpp  ClickableObject.h  DrawableObject.cpp  DrawableObject.h  MagnifierCursor.cpp  MagnifierCursor.h  Makefile  PathManager.cpp  PathManager.h  Polygon.cpp  Polygon.h  PositionToMax.txt  PositionToPaint.txt  TextManager.cpp  TextManager.h  base_argparser.h  button.cpp  button.h  drawn_object.h  gl_includes.h  main.cpp  paint.exe.stackdump  paint_argparser.h  path.cpp  path.h  shader_manager.cpp  shader_manager.h  text.cpp  text.h
dynamic_projection/source/applications/pong/: Makefile  Makefile.depend  argparser.h  main.cpp  pong  pong.cpp  pong.h
dynamic_projection/source/applications/puzzle/: CHRIS_main.cpp  PuzzlePiece.h  (+6 more)
dynamic_projection/source/common/: ASTM_E490.cpp  CIE.cpp  CIE.h  CalibratedCamera.h  CameraAPI.hpp  DiskImageCamera.hpp  FisheyeCamera.hpp  GigEVisionCamera.cpp  GigEVisionCamera.hpp  GigEVisionUtil.cpp  GigEVisionUtil.h  HDRImage.h  Image.h  Image.tpp  ImageGamma.h  ImageOps.h  Integrator.h  Makefile  Matrix3.h  Mesh.hpp  OffScreenBuffer.hpp  OpenGLProjector.h  OpenGLProjector.h.old  Photon.h  PointGreyCamera.hpp  Polynomial.h  Ray.h  SocketReader.h  SolarSystem.h  Spectrum.h  Vector3.h  VimbaCamera.h  color_balance.cpp  counter.h  counter_test.cpp  directory_locking.h  displayParser.h  glslshader.hpp  glxContext.hpp  grab_frame.cpp  (+8 more)
dynamic_projection/source/cubemap_to_fisheye/: cubemap_to_fisheye.cpp
dynamic_projection/source/ir_tracking/: FindLeds.hpp  Makefile  ir_data_point.cpp  ir_data_point.h  led_pixel_finder.cpp  trail_merger.cpp  viewer.cpp  viewer.h
dynamic_projection/source/multi_cursor/: InteractionLogger.cpp  InteractionLogger.h  action.h  altest2.cpp  cursor.cpp  cursor.h  interaction.cpp  interaction.h  key_and_mouse_logger.cpp  key_and_mouse_logger.h  laser.cpp  laser.h  mouseRead  mouseRead.cpp  multiMouse.cpp  multiMouse.h  replacelast.h
dynamic_projection/source/scripts/: blackout_projectors  buildallscript.sh  disco_projectors2  getch.py  gitallscript.sh  lsv_once.py  lsvo_once.py  old_run_daylighting.py  play_a_day.pl  remesh_once.py  remesh_tween_once.py  run_daylighting.py  system_variables.py
dynamic_projection/source/table_top_detection/: argparser.h  arrow.h  circle.h  color.h  colortoken.cpp  colortoken.h  column.h  curved_wall.cpp  curved_wall.h  debugging_images.h  histogram.h  line.h  main.cpp  object.cpp  object.h  person.h  platform.h  point.h  quad.cpp  quad.h  ramp.h  rectangle.h  scene.cpp  scene.h  soldier.cpp  soldier.h  table.h  unidentified.h  wall.cpp  wall.h  window.h
dynamic_projection/source/tabletop/: CMakeLists.txt  argparser.h  main.cpp
lsvo/src/: CMakeLists.txt  DeviceMemoryLogger.cpp  GLM.cpp  GLUTDisplay.cpp  HDRLoader.cpp  ImageDisplay.cpp  ImageLoader.cpp  MeshLoader.cpp  ModelLoader.cpp  Mouse.cpp  ObjLoader.cpp  PPMLoader.cpp  PinholeCamera.cpp  SConscript  SampleScene.cpp  SimpleScene.cpp  constantbg.cu  eyeRayPass.cu  gatherPass.cu  gatherPassOld.cu  glew.c  importonPass.cu  main.cpp  momentTransferPass.cu  normal_shader.cu  patchgetter.cpp  photonPass.cu  pinhole_camera.cu  quickRayPass.cu  regatherPass.cu  sun.cpp  sutil.c  triangleMesh.cu
lsvo/src/cmake/: ConfigCompilerFlags.cmake  FindCUDA.cmake  FindCUDA.cmake~  FindGLEW.cmake  FindGLUI.cmake  FindOptiX.cmake  FindOptiX.cmake~  FindSUtilGLUT.cmake
remesher/qtsrc/: CMakeLists.txt  openglwindow.h
remesher/src/: CMakeLists.txt  OffScreenBuffer.hpp  OpenGLProjector.h  accelerationgrid.cpp  accelerationgrid.h  argparser.h  boundingbox.cpp  boundingbox.h  bvh.cpp  bvh.h  camera.cpp  camera.h  collapse.cpp  collect.cpp  collect.h  command.h  cut_plane.h  directory_locking.h  edge.cpp  edge.h  element.cpp  element.h  flip.cpp  glCanvas.cpp  glCanvas.h  hash.h  heap.cpp  heap.h  image.cpp  image.h  load.cpp  load_material.cpp  main.cpp  markable.h  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meshio.h  (+46 more)
remesher/src/untitled/: untitled.qmlproject
(+1216 files in other folders)
